# samp-log-core

./: .gitmodules  CMakeLists.txt  Earthfile
cmake/: conan.cmake
include/samplog/: export.h
src/: AmxDebugManager.cpp  CMakeLists.txt  FileChangeDetectorWindows.cpp  LogConfig.hpp  LogManager.cpp  LogManager.hpp  LogRotationManager.cpp  Logger.cpp  Logger.hpp  Singleton.hpp  utils.cpp
src/amx/: CMakeLists.txt  amx.c
